--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,7 +24,7 @@ li {
   border-radius: 1rem;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
-li:hover:not(.selected, .previous, .next) {
+li:hover:not(.selected, .previous, .next, .alice-carousel__stage-item) {
   background-color: rgba(255, 255, 255, 0.16);
 }
 li.previous,
